media/sabnzbd/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sabnzbd
spec:
  serviceName: sabnzbd
  selector:
    matchLabels:
      app: sabnzbd
  replicas: 1
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
        - name: sabnzbd
          image: binhex/arch-sabnzbdvpn:4.3.2-1-06
          ports:
            - containerPort: 8080
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
            privileged: true # required for wireguard
          volumeMounts:
            - name: data
              mountPath: /config
            - name: downloads
              mountPath: /mnt/media/downloads
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: sabnzbd-data
        - name: downloads
          nfs:
            path: /mnt/media/downloads
            server: nas.internal
