media/sabnzbd/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: sabnzbd
