media/sabnzbd/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.1.0/24
spec:
  rules:
    - host: sabnzbd.internal.neils.house
      http:
        paths:
          - backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
            path: /
            pathType: Prefix
